adding body content

--- a/html_advanced/3-index.html
+++ b/html_advanced/3-index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <header>Header</header>
-        <main>Main</main>
+        <main>Main content</main>
         <footer>Footer</footer>
     </body>
 </html>
