--- a/html_advanced/6-index.html
+++ b/html_advanced/6-index.html
@@ -11,12 +11,24 @@
     <body>
         <header>Header</header>
         <main>
-            <content>Hero section</content>
+            <content>Hero section
+                <article>Work 1</article>
+                <article>Work 2</article>
+                <article>Work 3</article>
+            </content>
             <content>Services section</content>
             <content>Works section</content>
             <content>About section</content>
-            <content>Latest news section</content>
-            <content>Testimonials section</content>
+            <content>Latest news section
+                <article>Article 1</article>
+                <article>Article 2</article>
+                <article>Article 3</article>
+            </content>
+            <content>Testimonials section
+                <article>Testimonial 1</article>
+                <article>Testimonial 2</article>
+                <article>Testimonial 3</article>
+            </content>
             <content>Contact section</content>
         </main>
         <footer>Footer</footer>
