adding sections inside contents

--- a/html_advanced/6-index.html
+++ b/html_advanced/6-index.html
@@ -12,9 +12,11 @@
         <header>Header</header>
         <main>
             <content>Hero section
-                <article>Work 1</article>
-                <article>Work 2</article>
-                <article>Work 3</article>
+                <section>
+                    <article>Work 1</article>
+                    <article>Work 2</article>
+                    <article>Work 3</article>
+                </section>
             </content>
             <content>Services section</content>
             <content>Works section</content>
