--- a/html_advanced/6-index.html
+++ b/html_advanced/6-index.html
@@ -11,27 +11,25 @@
     <body>
         <header>Header</header>
         <main>
-            <content>Hero section
-                <section>
+            <section>Hero section
                     <article>Work 1</article>
                     <article>Work 2</article>
                     <article>Work 3</article>
-                </section>
-            </content>
-            <content>Services section</content>
-            <content>Works section</content>
-            <content>About section</content>
-            <content>Latest news section
+            </section>
+            <section>Services section</section>
+            <section>Works section</section>
+            <section>About section</section>
+            <section>Latest news section
                 <article>Article 1</article>
                 <article>Article 2</article>
                 <article>Article 3</article>
-            </content>
-            <content>Testimonials section
+            </section>
+            <section>Testimonials section
                 <article>Testimonial 1</article>
                 <article>Testimonial 2</article>
                 <article>Testimonial 3</article>
-            </content>
-            <content>Contact section</content>
+            </section>
+            <section>Contact section</section>
         </main>
         <footer>Footer</footer>
     </body>
