adding homepage heading

--- a/html_advanced/6-index.html
+++ b/html_advanced/6-index.html
@@ -11,13 +11,13 @@
     <body>
         <header>Header</header>
         <main>
-            <section>Hero section
+            <section>Hero section</section>
+            <section>Services section</section>
+            <section>Works section
                 <article>Work 1</article>
                 <article>Work 2</article>
                 <article>Work 3</article>
             </section>
-            <section>Services section</section>
-            <section>Works section</section>
             <section>About section</section>
             <section>Latest news section
                 <article>Article 1</article>
