--- a/html_advanced/11-styleguide.html
+++ b/html_advanced/11-styleguide.html
@@ -9,8 +9,8 @@
         <link rel="icon" type="image/png" href="./favicon.png">
     </head>
     <body>
-        <header>Header</header>
-        <main>Main content
+        <header></header>
+        <main>
             <section>
                 <header>
                     <h2>Headigs</h2>
@@ -23,6 +23,6 @@
                 <h6>Heading level 6</h6>
             </section>
         </main>
-        <footer>Footer</footer>
+        <footer></footer>
     </body>
 </html>
