--- a/html_advanced/12-index.html
+++ b/html_advanced/12-index.html
@@ -23,7 +23,7 @@
                 <h3>Social Media</h3>
             </section>
             <section><h2>Works</h2>
-                <p>Take a look at our portfolio</p>
+                <p>Take a look in our portfolio</p>
                 <article><h3>Interior Design</h3></article>
                 <article><h3>Web Development</h3></article>
                 <article><h3>Personal Brand</h3></article>
