--- a/html_advanced/14-index.html
+++ b/html_advanced/14-index.html
@@ -9,8 +9,9 @@
         <link rel="icon" type="image/png" href="./favicon.png">
     </head>
     <body>
-        <span>Techium</span>
         <header>
+            <span>Techium</span>
+            <nav></nav>
         </header>
         <main>
             <section><h2>We help you build your brand!</h2></section>
