--- a/html_advanced/9-index.html
+++ b/html_advanced/9-index.html
@@ -9,7 +9,9 @@
         <link rel="icon" type="image/png" href="./favicon.png">
     </head>
     <body>
-        <header>Header</header>
+        <header>
+            <nav></nav>
+        </header>
         <main>
             <section><h2>We help you build your brand!</h2></section>
             <section><h2>Services</h2></section>
