--- a/html_advanced/15-index.html
+++ b/html_advanced/15-index.html
@@ -18,6 +18,8 @@
         <main>
             <div>
                 <section><h2>We help you build your brand!</h2></section>
+            </div>
+            <div>
                 <section>
                     <h2>Services</h2>
                     <p>We work with you</p>
@@ -28,12 +30,16 @@
                     <h3>Web Development</h3>
                     <h3>Social Media</h3>
                 </section>
+            </div>
+            <div>
                 <section><h2>Works</h2>
                     <p>Take a look in our portfolio</p>
                     <article><h3>Interior Design</h3></article>
                     <article><h3>Web Development</h3></article>
                     <article><h3>Personal Brand</h3></article>
                 </section>
+            </div>
+            <div>
                 <section>
                     <h2>About Us</h2>
                     <p>Everything about us</p>
@@ -44,6 +50,8 @@
                     <h3>How we work</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
                 </section>
+            </div>
+            <div>
                 <section><h2>Latest news</h2>
                     <article>
                         <p>Career</p>
@@ -61,12 +69,16 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones.</p>
                     </article>
                 </section>
+            </div>
+            <div>
                 <section><h2>Testimonials</h2>
                     <p>We are more than a digital company</p>
-                    <article>Testimonial 1</article>
                     <article>Testimonial 2</article>
+                    <article>Testimonial 1</article>
                     <article>Testimonial 3</article>
                 </section>
+            </div>
+            <div>
                 <section>
                     <h2>Contact</h2>
                     <p>We like to know new people</p>
