--- a/html_advanced/17-index.html
+++ b/html_advanced/17-index.html
@@ -142,6 +142,9 @@
                     </div>
                 </section>
         </main>
+
+        <!-- Footer -->
+
         <footer>
             <div>Footer</div>
         </footer>
