--- a/html_advanced/20-index.html
+++ b/html_advanced/20-index.html
@@ -20,11 +20,13 @@
                 <nav>
                     <a href="/">Home</a>
                     <a href="services">Services</a>
-                    <a href="works">Works</a>
                     <a href="about">About</a>
                     <a href="latest_news">Latest news</a>
                     <a href="testimonials">Testimonials</a>
                     <a href="contact">Contact</a>
+                </nav>
+                <nav>
+                    <a href="works">Works</a>
                 </nav>
             </div>
         </header>
