--- a/html_advanced/20-index.html
+++ b/html_advanced/20-index.html
@@ -19,12 +19,12 @@
                 </div>
                 <nav>
                     <a href="/">Home</a>
-                    <a id="services">Services</a>
-                    <a id="works">Works</a>
-                    <a id="about">About</a>
-                    <a href="latest_news">Latest news</a>
-                    <a href="testimonials">Testimonials</a>
-                    <a href="contact">Contact</a>
+                    <a id="#services">Services</a>
+                    <a id="#works">Works</a>
+                    <a id="#about">About</a>
+                    <a href="#latest_news">Latest news</a>
+                    <a href="#testimonials">Testimonials</a>
+                    <a href="#contact">Contact</a>
                 </nav>
             </div>
         </header>
