--- a/html_advanced/33-styleguide.html
+++ b/html_advanced/33-styleguide.html
@@ -113,9 +113,9 @@
                     <h2>Table</h2>
                 </header>
                 <table>
-                    <tr>
-                        <th scope="colgroup">Star Wars Trilogy Data</th>
-                    </tr>
+                    <caption>
+                        <b>Star Wars Trilogy Data</b>
+                    </caption>
                     <tr>
                         <th scope="col"><b>Title</b></th>
                         <th scope="col"><b>Director</b></th>
