--- a/html_advanced/33-styleguide.html
+++ b/html_advanced/33-styleguide.html
@@ -116,26 +116,30 @@
                     <caption>
                         <b>Star Wars Trilogy Data</b>
                     </caption>
-                    <tr>
-                        <th scope="col"><b>Title</b></th>
-                        <th scope="col"><b>Director</b></th>
-                        <th scope="col"><b>Release Date</b></th>
-                    </tr>
-                    <tr>
-                        <td><b>Star Wars: Episode IV - A New Hope</b></td>
-                        <td>George Lucas</td>
-                        <td>May 25th, 1977</td>
-                    </tr>
-                    <tr>
-                        <td><b>Star Wars: Episode V - The Empire Stikes Back</b></td>
-                        <td>Irvin Kershner</td>
-                        <td>May 21st, 1980</td>
-                    </tr>
-                    <tr>
-                        <td><b>Star Wars: Episode VI - A New Hope</b></td>
-                        <td>Richard Marquand</td>
-                        <td>May 25th, 1983</td>
-                    </tr>
+                    <thead>
+                        <tr>
+                            <th scope="col"><b>Title</b></th>
+                            <th scope="col"><b>Director</b></th>
+                            <th scope="col"><b>Release Date</b></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td><b>Star Wars: Episode IV - A New Hope</b></td>
+                            <td>George Lucas</td>
+                            <td>May 25th, 1977</td>
+                        </tr>
+                        <tr>
+                            <td><b>Star Wars: Episode V - The Empire Stikes Back</b></td>
+                            <td>Irvin Kershner</td>
+                            <td>May 21st, 1980</td>
+                        </tr>
+                        <tr>
+                            <td><b>Star Wars: Episode VI - A New Hope</b></td>
+                            <td>Richard Marquand</td>
+                            <td>May 25th, 1983</td>
+                        </tr>
+                    </tbody>
                 </table>
             </section>
         </main>
