--- a/html_advanced/33-styleguide.html
+++ b/html_advanced/33-styleguide.html
@@ -125,17 +125,17 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td><b>Star Wars: Episode IV - A New Hope</b></td>
+                            <th scope="row"><b>Star Wars: Episode IV - A New Hope</b></th>
                             <td>George Lucas</td>
                             <td>May 25th, 1977</td>
                         </tr>
                         <tr>
-                            <td><b>Star Wars: Episode V - The Empire Stikes Back</b></td>
+                            <th scope="row"><b>Star Wars: Episode V - The Empire Stikes Back</b></th>
                             <td>Irvin Kershner</td>
                             <td>May 21st, 1980</td>
                         </tr>
                         <tr>
-                            <td><b>Star Wars: Episode VI - A New Hope</b></td>
+                            <th scope="row"><b>Star Wars: Episode VI - A New Hope</b></th>
                             <td>Richard Marquand</td>
                             <td>May 25th, 1983</td>
                         </tr>
