adding correct table

--- a/html_advanced/33-styleguide.html
+++ b/html_advanced/33-styleguide.html
@@ -130,12 +130,12 @@
                             <td>May 25th, 1977</td>
                         </tr>
                         <tr>
-                            <th scope="row"><b>Star Wars: Episode V - The Empire Stikes Back</b></th>
+                            <th scope="row"><b>Star Wars: Episode V - The Empire Strikes Back</b></th>
                             <td>Irvin Kershner</td>
                             <td>May 21st, 1980</td>
                         </tr>
                         <tr>
-                            <th scope="row"><b>Star Wars: Episode VI - A New Hope</b></th>
+                            <th scope="row"><b>Star Wars: Episode VI - Return of the Jedi</b></th>
                             <td>Richard Marquand</td>
                             <td>May 25th, 1983</td>
                         </tr>
