--- a/html_advanced/34-styleguide.html
+++ b/html_advanced/34-styleguide.html
@@ -142,6 +142,25 @@
                     </tbody>
                 </table>
             </section>
+            <!-- Details -->
+            <section>
+                <header>
+                    <h2>Details</h2>
+                </header>
+                <div>
+                    <details>
+                        <summary>Show/Hide me</summary>
+                        <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+                    </details>
+                </div>
+                <div>
+                    <h3>Open</h3>
+                    <details open>
+                        <summary>Always open</summary>
+                        <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+                    </details>
+                </div>
+            </section>
         </main>
         <footer></footer>
     </body>
