adding details to styleguide

--- a/html_advanced/34-styleguide.html
+++ b/html_advanced/34-styleguide.html
@@ -148,6 +148,7 @@
                     <h2>Details</h2>
                 </header>
                 <div>
+                    <h3>Default</h3>
                     <details>
                         <summary>Show/Hide me</summary>
                         <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
