--- a/html_advanced/36-index.html
+++ b/html_advanced/36-index.html
@@ -105,7 +105,7 @@
                             <p>Everything about us</p>
                         </header>
                         <div>
-                            <img src="images/pic-about-us.jpg" alt="" height="447" width="600">
+                            <img src="images/pic-about-us.jpg" alt="" width="600" height="447">
                             <h3>Who are we</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
                             <h3>Our culture</h3>
@@ -145,7 +145,7 @@
                             </article>
                             <article>
                                 <div>
-                                    <img src="images/pic-blog-01.jpg" alt="" width="305" height="205">
+                                    <img src="images/pic-blog-03.jpg" alt="" width="305" height="205">
                                 </div>
                                 <p>Social</p>
                                 <h3><a href="#">Bestiarum vero nullum iudicium puto.</a></h3>
