--- a/html_advanced/38-styleguide.html
+++ b/html_advanced/38-styleguide.html
@@ -167,7 +167,7 @@
                 <header>
                     <h2>Video</h2>
                 </header>
-                <video src="https://intranet-projects-files.s3.amazonaws.com/webstack/BigBuckBunny.mp4" loop alt="Sorry, your browser doesn't support HTML5 video" controls poster="https://intranet-projects-files.s3.amazonaws.com/webstack/thumbnail.jpg"></video>
+                <video src="https://intranet-projects-files.s3.amazonaws.com/webstack/BigBuckBunny.mp4" loop title="Sorry, your browser doesn't support HTML5 video" controls poster="https://intranet-projects-files.s3.amazonaws.com/webstack/thumbnail.jpg"></video>
             </section>
         </main>
         <footer></footer>
